[gd_scene load_steps=3 format=3 uid="uid://bidvwtaq80bqn"]

[ext_resource type="Script" path="res://system/showcases/match3/Match3Game.gd" id="1_v62lr"]
[ext_resource type="PackedScene" uid="uid://cl63jew1kh535" path="res://system/showcases/match3/grid/Match3Grid.tscn" id="2_r7klt"]

[node name="Match3Game" type="Node2D"]
script = ExtResource("1_v62lr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(240, 0)
offset_right = 240.0
offset_bottom = 316.0
size_flags_vertical = 8

[node name="Selection" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=36]Selection
None[/font_size][/center]"
fit_content = true

[node name="Score" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=36]Score"
fit_content = true

[node name="Blue" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=36][color=blue]Blue"
fit_content = true

[node name="Green" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=36][color=green]Green"
fit_content = true

[node name="Red" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=36][color=red]Red"
fit_content = true

[node name="Match3Grid" parent="." instance=ExtResource("2_r7klt")]
position = Vector2(240, 0)

[connection signal="piece_selected" from="Match3Grid" to="." method="_on_piece_selected"]
[connection signal="score_gained" from="Match3Grid" to="." method="_update_score"]
